--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,3 +1,19 @@
-@import './base.css';
+
 @import "tailwindcss";
 
+body {
+    @apply bg-[#C3D3E3];
+    @apply font-sans;
+
+}
+
+html,
+body,
+#app {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
